[gd_scene load_steps=5 format=3 uid="uid://dbali5u4o76qd"]

[ext_resource type="Script" uid="uid://x18ufc40uwp2" path="res://Wendigo Level/WendigoCharacter/wendigo_ai.gd" id="1_ynmkr"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ynmkr"]
radius = 1.513127

[sub_resource type="CylinderShape3D" id="CylinderShape3D_it7xg"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ynmkr"]

[node name="WendigoAi" type="CharacterBody3D"]
axis_lock_linear_y = true
script = ExtResource("1_ynmkr")

[node name="PlayerDetectionArea" type="Area3D" parent="."]

[node name="PlayDetectionColl" type="CollisionShape3D" parent="PlayerDetectionArea"]
shape = SubResource("SphereShape3D_ynmkr")

[node name="MonitorTraps" type="Area3D" parent="."]

[node name="TrapsColl" type="CollisionShape3D" parent="MonitorTraps"]
shape = SubResource("CylinderShape3D_it7xg")

[node name="BodyColl" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_ynmkr")

[node name="BodyMesh" type="CSGCylinder3D" parent="BodyColl"]

[connection signal="area_entered" from="MonitorTraps" to="." method="_on_monitor_traps_area_entered"]
[connection signal="body_entered" from="MonitorTraps" to="." method="_on_monitor_traps_body_entered"]
